[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/monster.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 30 )

[sub_resource type="CircleShape2D" id=2]
radius = 350.0

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 0, 542.642 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Damage" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 4

[node name="Ground_Detect" type="RayCast2D" parent="."]
position = Vector2( -1.05264, 0 )
cast_to = Vector2( 0, 31 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0.276131, -23.0354 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 8, 87, 104, 153 )

[node name="Leg Up" type="Sprite" parent="Body"]
position = Vector2( 17.4338, 54.9785 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 27, 16, 53, 77 )

[node name="Leg middle" type="Sprite" parent="Body/Leg Up"]
position = Vector2( 3.68846, 27.6703 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 99, 19, 53, 70 )

[node name="feet" type="Sprite" parent="Body/Leg Up/Leg middle"]
position = Vector2( 4.62316, 16.6434 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 174, 35, 45, 52 )

[node name="Leg Up2" type="Sprite" parent="Body"]
position = Vector2( -27.7528, 56.6836 )
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 27, 16, 53, 77 )

[node name="Leg middle" type="Sprite" parent="Body/Leg Up2"]
position = Vector2( 3.68846, 27.6703 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 99, 19, 53, 70 )

[node name="feet" type="Sprite" parent="Body/Leg Up2/Leg middle"]
position = Vector2( 4.62316, 16.6434 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 174, 35, 45, 52 )

[node name="Arm Up" type="Sprite" parent="Body"]
position = Vector2( 25.8264, -14.2484 )
texture = ExtResource( 3 )
offset = Vector2( -8.07967, 10.9695 )
region_enabled = true
region_rect = Rect2( 211, 125, 34, 44 )

[node name="Arm Middle" type="Sprite" parent="Body/Arm Up"]
position = Vector2( -14.9399, 20.576 )
texture = ExtResource( 3 )
offset = Vector2( -10.2937, -6.78833 )
region_enabled = true
region_rect = Rect2( 174, 131, 33, 45 )

[node name="hand" type="Sprite" parent="Body/Arm Up/Arm Middle"]
position = Vector2( -17.5571, -13.1053 )
rotation = -0.542064
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( -13.1256, 18.5997 )
region_enabled = true
region_rect = Rect2( 117, 117, 46, 72 )

[node name="Arm Up3" type="Sprite" parent="Body"]
position = Vector2( -30.1595, -8.84888 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -6.94294, 8.12805 )
region_enabled = true
region_rect = Rect2( 211, 125, 34, 44 )

[node name="Arm Middle" type="Sprite" parent="Body/Arm Up3"]
position = Vector2( -15.224, 19.4387 )
texture = ExtResource( 3 )
offset = Vector2( -7.73599, -6.50366 )
region_enabled = true
region_rect = Rect2( 174, 131, 33, 45 )

[node name="hand" type="Sprite" parent="Body/Arm Up3/Arm Middle"]
position = Vector2( -16.1361, -13.6741 )
rotation = -0.443475
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( -12.3677, 18.7896 )
region_enabled = true
region_rect = Rect2( 117, 117, 46, 72 )

[node name="Arm Up2" type="Sprite" parent="Body"]
position = Vector2( 23.1464, 18.3188 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 211, 125, 34, 44 )

[node name="Arm Middle" type="Sprite" parent="Body/Arm Up2"]
position = Vector2( -15.571, 4.69348 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 174, 131, 33, 45 )

[node name="hand" type="Sprite" parent="Body/Arm Up2/Arm Middle"]
position = Vector2( -29.8565, 21.8992 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 117, 117, 46, 72 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
